[project]
name = "chatgpt-img-mcp"
version = "0.1.0"
description = "MCP server, CLI, and Claude skill for ChatGPT via browser automation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=0.1.0",
    "httpx>=0.27.0",
    "websocket-client>=1.6.0",
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "platformdirs>=4.0.0",
]

[project.scripts]
cgpt = "chatgpt_img_mcp.cli:main"
"cgpt-mcp" = "chatgpt_img_mcp.mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chatgpt_img_mcp"]

[tool.hatch.build.targets.wheel.force-include]
"src/chatgpt_img_mcp/skills" = "chatgpt_img_mcp/skills"
